--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,8 @@
 name: Docker Image CI
-
 on:
   push:
-    branches: ["main"]
+    tags:
+      - "*"
 
 jobs:
   build:
@@ -15,19 +15,19 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker Image
-        run: docker buildx build --load --file Dockerfile --tag draw-server:${{ github.sha }} .
+        run: docker buildx build --load --file Dockerfile --tag draw-server:${{ github.ref_name }} .
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Tag image:sha
-        run: docker tag draw-server:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/draw-server:${{ github.sha }}
+      - name: Tag image:tag
+        run: docker tag draw-server:${{ github.ref_name }} ghcr.io/${{ github.repository_owner }}/draw-server:${{ github.ref_name }}
 
-      - name: Push image:sha
-        run: docker push ghcr.io/${{ github.repository_owner }}/draw-server:${{ github.sha }}
+      - name: Push image:tag
+        run: docker push ghcr.io/${{ github.repository_owner }}/draw-server:${{ github.ref_name }}
 
       - name: Tag Docker image:latest
-        run: docker tag draw-server:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/draw-server:latest
+        run: docker tag draw-server:${{ github.ref_name }} ghcr.io/${{ github.repository_owner }}/draw-server:latest
 
       - name: Push image:latest
         run: docker push ghcr.io/${{ github.repository_owner }}/draw-server:latest
