--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,18 @@
 {
-	"name": "dgmjs",
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bookworm",
-	"forwardPorts": [
-		4321
-	],
-	"customizations": {
-		"vscode": {
-			"settings": {
-				"editor.formatOnSave": true,
-				"editor.tabSize": 2,
-				"editor.defaultFormatter": "esbenp.prettier-vscode",
-			},
-			"extensions": [
-				"esbenp.prettier-vscode"
-			]
-		}
-	}
+  "name": "dgmjs",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bookworm",
+  "forwardPorts": [4321],
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "editor.formatOnSave": true,
+        "editor.tabSize": 2,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+      },
+      "extensions": ["esbenp.prettier-vscode"]
+    }
+  },
+  "features": {
+    "ghcr.io/devcontainers-extra/features/go-task:1": {}
+  }
 }
